# cipher-demo

./: pyproject.toml
cipher_demo/: cipher.py  corpus_loader.py  words_names.py
tests/: test_cipher_demo.py
