[tool.poetry]
name = "cipher_demo"
version = "0.1.0"
description = ""
authors = ["Kevin Henry <kevinhenry@mac.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.6.2"
regex = "^2021.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
